# ibitlabs-public

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  STARTER.md  paper_quickstart.py  requirements.txt  sol_sniper_config.py  sol_sniper_executor.py  state_db.py
docs/: days_cms.md  live-restart-checklist.md  shadow_12h_rule.md
mcp-server/: README.md  SKILL.md  pyproject.toml
mcp-server/examples/: claude_desktop_config.json
mcp-server/ibitlabs_mcp/: __init__.py  server.py
receipt-rule-engine/: engine.py  rules.example.py
receipt-rule-engine/scripts/: anchor_daily.py  reconcile_now.py
receipt-viewer/: README.md  code-writing-demo.jsonl  dashboard.html  index.html  monitor.html  score.js
receipt-viewer/data/: office-events.json.sample
scripts/: analyze_shadow_12h_rule.py
